# PhenoAnalysis

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  aclocal.m4  config.h.in  config_lema.sh  config_narsarsuaq.sh  config_pilatus.sh  config_yellowstone.sh  configure  configure.ac
analysis/R/: SpringStatPlant_plot_2010.R  dayofyear.R~  is.leap.R  monthdayofyear.R  monthdayofyear.R~  ndayofmonth.R  phenology_cardedeu.R  phenology_dwh.R  phenology_dwh.R~  phenology_swiss.R  phenology_swiss.R~  read_phenoanalysis.R~
analysis/idl/: Makefile.am  Makefile.in  brewer.txt  check_pftdata.pro  climate_sites.pro  colbar.pro  colbar_standalone.pro  contourplot.pro  convert_sites.pro  corr_test.pro  corr_ttest.pro  enkf.pro  file_lock.pro  fill_dist.pro  fill_gauss.pro  fparlaifit.pro  fparlaifit2.pro  function_gauss.pro  gauss_fun.pro  header.pro  histoplot.pro  ll2lcc.pro  ll2rpol.pro  makepft.idl  makepft.pro  makesites.pro  maketopo.idl  maketopo.pro  map_sites.pro  mpfit.pro  mpfitfun.pro  nan_rebin.pro  netcdf_close.pro  netcdf_init.pro  netcdf_read.pro  netcdf_write.pro  overplot.pro  parameter2table.pro  phenology_global.pro  phenology_local.pro  (+24 more)
analysis/idl_lib/: Makefile.am  Makefile.in  enkf_driver_r4.F90  enkf_driver_r8.F90  enkf_wrapper_r4.c  enkf_wrapper_r8.c
config/: Makefile.am  Makefile.in  phenoanalysis-config.c
data/ini/: .RData  .Rhistory
data/ini/COSMO/: pheno.nml
data/ini/Example1/: pheno.nml
data/ini/Example2/: pheno.nml
data/ini/Example3/: pheno.nml
data/ini/Global/: pheno.nml
data/phenology/Harvard_Forest/: hf003-01-plant.csv  hf003-02-daily.csv  hf003-03-spring.csv  hf003-04-fall.csv  hf003-05-mean-ind.csv  hf003-06-mean-spp.csv
data/phenology/Harvard_Forest_Old/: #harvard_pheno.pro#  fall1991.txt  fall1992.txt  fall1993.txt  fall1994.txt  fall1995.txt  fall1996.txt  fall1997.txt  fall1998.txt  fall1999.txt  fall2000.txt  fall2001.txt  fall2002.txt  fall2003.txt  fall2004.txt  fall2005.txt  fall2006.txt  harvard_pheno.pro  metedata.txt  plant_species.txt  plantinf.txt  spr1990.txt  spr1991.txt  spr1992.txt  spr1993.txt  spr1994.txt  spr1995.txt  spr1996.txt  spr1997.txt  spr1998.txt  spr1999.txt  spr2000.txt  spr2001.txt  spr2002.txt  spr2003.txt  spr2004.txt  spr2005.txt  spr2006.txt
data/phenology/Puechabon/: DailyFPAR2002-2007.xls
data/phenology/Swiss_Lowland/: Text_This.txt
data/sites/: README
doc/: modis-sin2ll.txt  pheno_analysis_manual.tex
scripts/: Makefile.am  Makefile.in  gettiles.pl  makedepend.sh  netcdf_subsetting.sh  obscount.pl  read_list.pm  submit_makepft.pl  submit_maketopo.pl  submit_phenoanalysis.pl
src/: Makefile.am  Makefile.in  README  alma_module.F90  assimilation_module.F90  bilinear_module.F90  cosmo_module.F90  driver_module.F90  ecmwf_module.F90  enkf_module_r4.F90  enkf_module_r8.F90  exit_module.F90  file_module.F90  geosat_module.F90  glob.c  hdf_module.F90  histogram_module.F90  init_module.F90  meteorology_average_module.F90  meteorology_module.F90  mfg_mviri_module.F90  modis_module.F90  modsin_module.F90  msg_seviri_module.F90  netcdf_module.F90  output_module.F90  parameter_module.F90  pft_module.F90  phenoanalysis.F90  phenology_model_module.F90  phenology_module.F90  photoperiod_module.F90  proj_module.F90  quicksort_module.F90  quicksort_test.F90  read_config.c  read_config.h  reproject_module.F90  reproject_test.F90  restart_module.F90  (+3 more)
