# install following scripts in $(bindir) and distribute them

# installed and distributed scripts
dist_script_SCRIPTS = gettiles.pl makedepend.pl makedepend.sh obscount.pl read_list.pm submit_makepft.pl submit_maketopo.pl submit_phenoanalysis.pl netcdf_subsetting.sh

scriptdir = $(datadir)/scripts

uninstall-local:
	rmdir $(datadir)/scripts
